[gd_scene load_steps=38 format=3 uid="uid://duyind1gtr8lg"]

[ext_resource type="Script" uid="uid://cwwjoaufqmmca" path="res://Interactables/player/Player.gd" id="1_xxgcw"]
[ext_resource type="Texture2D" uid="uid://dc2gela3hahdl" path="res://Assets/icon.svg" id="2_exd8k"]
[ext_resource type="Texture2D" uid="uid://c4ktnrasqe2xc" path="res://Interactables/player/player_character_idle.png" id="3_ixbpm"]
[ext_resource type="Texture2D" uid="uid://boiygt2leqbqx" path="res://Interactables/player/player_character_death.png" id="3_rpf03"]
[ext_resource type="Texture2D" uid="uid://d26bym4gbs8d4" path="res://Interactables/player/player_character_run.png" id="4_c6leb"]
[ext_resource type="Script" uid="uid://cia8vrn00kga1" path="res://Interactables/player/animation_component.gd" id="5_dirf7"]
[ext_resource type="Script" uid="uid://c11a64quhq8r8" path="res://Interactables/player/gun.gd" id="6_idpv6"]
[ext_resource type="Texture2D" uid="uid://r3l0rplaak76" path="res://Interactables/player/shotgun.png" id="7_rpf03"]
[ext_resource type="Texture2D" uid="uid://v87jyxtdgf0e" path="res://Interactables/player/shotgun_muzzleflash.png" id="8_x5dtk"]
[ext_resource type="Script" uid="uid://dkojsodkjtlmm" path="res://Interactables/player/action_recorder.gd" id="10_x5dtk"]
[ext_resource type="Texture2D" uid="uid://ca83utm0xv87p" path="res://arrow.png" id="11_wyhmo"]
[ext_resource type="AudioStream" uid="uid://c4ac73drkp3pt" path="res://Assets/shotgun.wav" id="12_eyay0"]
[ext_resource type="Script" uid="uid://doc0e4n31t5nw" path="res://world nodes/loopdisplay.gd" id="13_cakch"]
[ext_resource type="Script" uid="uid://cieotsgdqceqy" path="res://Interactables/player/timer.gd" id="14_4y5gc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lv4bx"]
atlas = ExtResource("3_rpf03")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgd8i"]
atlas = ExtResource("3_rpf03")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b6hw"]
atlas = ExtResource("3_rpf03")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cx7u"]
atlas = ExtResource("3_rpf03")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w53g3"]
atlas = ExtResource("3_rpf03")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_idpv6"]
atlas = ExtResource("3_ixbpm")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpf03"]
atlas = ExtResource("3_ixbpm")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5dtk"]
atlas = ExtResource("3_ixbpm")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t07l"]
atlas = ExtResource("3_ixbpm")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_on558"]
atlas = ExtResource("4_c6leb")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqopd"]
atlas = ExtResource("4_c6leb")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_icpky"]
atlas = ExtResource("4_c6leb")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_58jvb"]
atlas = ExtResource("4_c6leb")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l73k"]
atlas = ExtResource("4_c6leb")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqrcq"]
atlas = ExtResource("4_c6leb")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2agh"]
atlas = ExtResource("4_c6leb")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpo3a"]
atlas = ExtResource("4_c6leb")
region = Rect2(336, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_5dc8e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_exd8k")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_lv4bx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgd8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b6hw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cx7u")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_w53g3")
}],
"loop": false,
"name": &"die",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_idpv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpf03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5dtk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t07l")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_on558")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqopd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icpky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58jvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l73k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqrcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2agh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpo3a")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xxgcw"]
radius = 44.1814

[sub_resource type="AtlasTexture" id="AtlasTexture_kyfeq"]
atlas = ExtResource("8_x5dtk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mkjs"]
atlas = ExtResource("8_x5dtk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yybc7"]
atlas = ExtResource("8_x5dtk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_lv4bx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyfeq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mkjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yybc7")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("player") groups=["player"]]
collision_layer = 17
collision_mask = 2
script = ExtResource("1_xxgcw")
player = NodePath(".")
speed = 350

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5dc8e")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.25, 0.25)
shape = SubResource("CircleShape2D_xxgcw")

[node name="AnimationComponent" type="Node" parent="."]
script = ExtResource("5_dirf7")

[node name="gun" type="Node2D" parent="."]
script = ExtResource("6_idpv6")

[node name="GunSprite" type="Sprite2D" parent="gun"]
position = Vector2(24, 0)
texture = ExtResource("7_rpf03")

[node name="MuzzleflashAnimation" type="AnimatedSprite2D" parent="gun"]
position = Vector2(55, 2)
sprite_frames = SubResource("SpriteFrames_lv4bx")

[node name="ReloadTimer" type="Timer" parent="gun"]
wait_time = 9.22337e+18
one_shot = true

[node name="Barrel" type="Marker2D" parent="gun"]
position = Vector2(12, -1)

[node name="Camera2D" type="Camera2D" parent="."]
ignore_rotation = false
zoom = Vector2(1, 0.8)

[node name="ActionRecorder" type="Node" parent="."]
script = ExtResource("10_x5dtk")

[node name="item_pointer" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="item_pointer"]
position = Vector2(24, 0)
rotation = 1.5708
texture = ExtResource("11_wyhmo")

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_eyay0")
volume_db = -20.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 536.0
offset_right = 630.0
offset_bottom = 23.0
script = ExtResource("13_cakch")

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 536.0
offset_top = 40.0
offset_right = 576.0
offset_bottom = 63.0
script = ExtResource("14_4y5gc")

[node name="invincibility" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="animation_finished" from="gun/MuzzleflashAnimation" to="gun" method="_on_muzzleflash_animation_animation_finished"]
[connection signal="timeout" from="gun/ReloadTimer" to="gun" method="_on_reload_timer_timeout"]
[connection signal="timeout" from="invincibility" to="." method="_on_invincibility_timeout"]
